# pytranus

./: .gitignore  CLAUDE.md  Makefile  README.md  TECHNICAL_REPORT.md  TECHNICAL_REPORT_TORCH.md  interactive.py  pyproject.toml  requirements.txt  setup.py
.claude/: settings.local.json
pytranus/: __init__.py  _math.py  config.py  io.py  lcal.py  lcal_torch.py  modules.py  params.py  support.py  torch_utils.py
pytranus/pylcal/: lcal.py
pytranus/pylcal/utils/: DX.c  DX.html  DX.pyx  cython_setup.py
pytranus/tranusio/: __init__.py  lcalio.py  lcalparam.py
tests/: context.py  exampleC.py  test_exampleC.py  test_setup.py  test_torch.py
tests/ExampleC/: .directory  COST_T.MTX  DISU_T.MTX  EXC03A.LOC  W_EXC.L0E  W_EXC.Z1E  W_TRANUS.CTL
tests/ExampleC/03A/: EXC03A.C1S  EXC03A.L1S  EXC03A.L2S  W_EXC03A.L1E  pyLcal_03A.L1S
